final personal website

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
     <h2>Get In Touch</h2>
     <h3>for any type of queries.</h3>
     <p>Add me on ur social networking sites and let us get along.</p>
-  <!-- <a class="btn" href="mailto:mohitkamble22739@gmail.com">CONTACT ME</a><br> -->
-    <button type="button" name="button">CONTACT ME</button>
+  <!-- <a class="btn" href="mailto:mohitkamble22739@gmail.com">CONTACT ME</a><br>
+    <button type="button" name="button" onclick="https://wa.me/917738027004">CONTACT ME</button>
+    <a href="https://wa.me/917738027004" class="btn btn-primary btn-lg disabled" role="button" aria-disabled="true">Contact</a>
+-->
 
   </div>
 </div>
@@ -50,6 +52,8 @@
   <a class="footer-link" href="https://www.linkedin.com/in/mohit-kamble-19a30018b">LinkedIn</a>
   <a class="footer-link" href="https://twitter.com/Mohit_kamble22?s=09">Twitter</a>
   <a class="footer-link" href="https://mohitkamble.github.io/cv/">Website</a>
+  <a class="footer-link" href="https://wa.me/917738027004">WhatsApp</a>
+
   <p class="copyright">© 2019 Mohit Kamble.</p>
 </div>
 
