--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <div class="middle-container">
   <div class="profile">
-    <img  class="profilepic"src="images/27373.jpg" alt="profile pic">
+    <img  class="profilepic"src="images/27373.JPG" alt="profile pic">
     <h2>Hey There.</h2>
     <p>This is ur friend and an Aspiring full Stack developer.</p>
   </div>
